force-app/main/default/objects/Venta__c/fields/Ganada__c.field-meta.xml
<CustomField>
    <fullName>Ganada__c</fullName>
    <formula>TEXT(Oportunidad__r.StageName) == &apos;Cerrada/Ganada&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ganada</label>
    <type>Checkbox</type>
</CustomField>