force-app/main/default/objects/Venta__c/fields/Imp_Neto_Previsto__c.field-meta.xml
<CustomField>
    <fullName>Imp_Neto_Previsto__c</fullName>
    <label>Importe Venta Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>