force-app/main/default/objects/Venta__c/fields/Importe_margen_neto__c.field-meta.xml
<CustomField>
    <fullName>Importe_margen_neto__c</fullName>
    <formula>ImporteMargenNeto__c / Imp_Neto_Previsto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Importe margen neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>