force-app/main/default/objects/Venta__c/fields/ImporteMargenNeto__c.field-meta.xml
<CustomField>
    <fullName>ImporteMargenNeto__c</fullName>
    <label>Importe Margen Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>