force-app/main/default/objects/Venta__c/fields/PlanificacionComercial__c.field-meta.xml
<CustomField>
    <fullName>PlanificacionComercial__c</fullName>
    <label>Planificación comercial</label>
    <referenceTo>PlanificacionComercial__c</referenceTo>
    <relationshipLabel>Ventas</relationshipLabel>
    <relationshipName>Ventas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>